# markdown

./: .gitignore  Cargo.toml  LICENSE  README.md  index.js  markdown.core.wasm  markdown.d.ts  markdown.js  package.json  world.wit
imports/: wasi-exit.js  wasi-filesystem.d.ts  wasi-filesystem.js  wasi-logging.d.ts  wasi-logging.js  wasi-poll.d.ts  wasi-poll.js  wasi-random.js
poly/: wasi_snapshot_preview1.wasm
src/: highlighting.rs  lib.rs
