[package]
name = "markdown"
version = "0.1.0"
authors = ["Olav Vatne <ovatn@equinor.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.78"
pulldown-cmark = { version = "0.9.2", default-features = false }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
syntect = "5.0.0"
once_cell = "1.17.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
